// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createConfig, cli use works #0 1`] = `
Object {
  "clientId": "111",
  "clientSecret": "111",
  "outDir": "",
  "outFileName": "spotify-token",
  "port": 3000,
  "scopes": "user-read-email",
}
`;

exports[`createConfig, cli use works #1 1`] = `
Object {
  "clientId": "333",
  "clientSecret": "333",
  "outDir": "",
  "outFileName": "spotify-token",
  "port": 4000,
  "scopes": "user-read-email",
}
`;

exports[`createConfig, cli use works #2 1`] = `
Object {
  "clientId": "222",
  "clientSecret": "222",
  "outDir": "/secrets",
  "outFileName": "mytoken",
  "port": 1000,
  "scopes": "scopes",
}
`;

exports[`createConfig, programmatic use works #0 1`] = `
Object {
  "clientId": "cid",
  "clientSecret": "cs",
  "outDir": "",
  "outFileName": "spotify-token",
  "port": 3000,
  "scopes": "user-read-email",
}
`;

exports[`createConfig, programmatic use works #1 1`] = `
Object {
  "clientId": "cid",
  "clientSecret": "cs",
  "outDir": "/secrets",
  "outFileName": "mytoken",
  "port": 1000,
  "scopes": "scopes",
}
`;
